@@ -1,5 +1,6 @@
 1.4.1
 Updated copyright notice
+changed org.jcrontab.Jcrontab to adapt to the right message
 1.4
 Added Basic support for Beans from Tim Stephenson
 CHanged MANIFEST.MF to adapt it to the last log4j
